tests/baselines/reference/commentsOnObjectLiteral1.errors.txt
tests/cases/compiler/commentsOnObjectLiteral1.ts(1,14): error TS2304: Cannot find name 'makeClass'.


==== tests/cases/compiler/commentsOnObjectLiteral1.ts (1 errors) ====
    var Person = makeClass( 
                 ~~~~~~~~~
!!! error TS2304: Cannot find name 'makeClass'.
       /** 
         @scope Person 
       */ 
       {
       } 
    );